--- a/docker/registry-httpd.conf
+++ b/docker/registry-httpd.conf
@@ -181,8 +181,8 @@ LoadModule autoindex_module modules/mod_autoindex.so
 #LoadModule asis_module modules/mod_asis.so
 #LoadModule info_module modules/mod_info.so
 #LoadModule suexec_module modules/mod_suexec.so
-LoadModule auth_mellon_module /usr/lib/apache2/modules/mod_auth_mellon.so
-LoadModule php7_module /usr/lib/apache2/modules/libphp7.3.so
+LoadModule auth_mellon_module modules/mod_auth_mellon.so
+# LoadModule php7_module /usr/lib/apache2/modules/libphp7.3.so
 <IfModule !mpm_prefork_module>
 	#LoadModule cgid_module modules/mod_cgid.so
 </IfModule>
